Fix some broken styles

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body
 {
     width: 600px;
     margin: 0 auto;
-    margin-top: 12%;
+    padding-top: 12%;
 }
 
 header h1
@@ -44,6 +44,7 @@ header h1
 {
     margin: 0 2%;
     border-top: 1px solid #e3e3e3;
+    font-size: 80%;
 }
 
 #share, #authors
